refactor(coordenador): Finaliza lógica de serviço para CRUD de Coordenadores