@@ -2,26 +2,24 @@ package br.edu.ifpb.sgm.projeto_sgm.service;
 
 import br.edu.ifpb.sgm.projeto_sgm.dto.CoordenadorRequestDTO;
 import br.edu.ifpb.sgm.projeto_sgm.dto.CoordenadorResponseDTO;
-import br.edu.ifpb.sgm.projeto_sgm.exception.CursoNotFoundException;
 import br.edu.ifpb.sgm.projeto_sgm.exception.CoordenadorNotFoundException;
-import br.edu.ifpb.sgm.projeto_sgm.exception.DisciplinaNotFoundException;
+import br.edu.ifpb.sgm.projeto_sgm.exception.CursoNotFoundException;
 import br.edu.ifpb.sgm.projeto_sgm.exception.InstituicaoNotFoundException;
 import br.edu.ifpb.sgm.projeto_sgm.mapper.CoordenadorMapper;
 import br.edu.ifpb.sgm.projeto_sgm.model.Coordenador;
 import br.edu.ifpb.sgm.projeto_sgm.model.Curso;
-import br.edu.ifpb.sgm.projeto_sgm.model.Disciplina;
 import br.edu.ifpb.sgm.projeto_sgm.model.Instituicao;
 import br.edu.ifpb.sgm.projeto_sgm.repository.CoordenadorRepository;
 import br.edu.ifpb.sgm.projeto_sgm.repository.CursoRepository;
-import br.edu.ifpb.sgm.projeto_sgm.repository.DisciplinaRepository;
 import br.edu.ifpb.sgm.projeto_sgm.repository.InstituicaoRepository;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.Query;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,23 +37,35 @@ public class CoordenadorServiceImp {
     private InstituicaoRepository instituicaoRepository;
 
     @Autowired
-    private DisciplinaRepository disciplinaRepository;
-
-    @Autowired
     private CoordenadorMapper coordenadorMapper;
 
+    @Autowired
+    private EntityManager entityManager; // Usado para a operação de "remover cargo"
+
     public ResponseEntity<CoordenadorResponseDTO> salvar(CoordenadorRequestDTO dto) {
-        Coordenador coordenador = coordenadorMapper.toEntity(dto);
-        coordenador.setCurso(buscarCurso(dto.getCursoId()));
-        coordenador.setInstituicao(buscarInstituicao(dto.getInstituicaoId()));
-        coordenador.setDisciplinas(buscarDisciplinas(dto.getDisciplinasId()));
+        coordenadorRepository.findByCurso_Id(dto.getCursoId()).ifPresent(c -> {
+            throw new IllegalStateException("O curso com ID " + dto.getCursoId() + " já possui um coordenador.");
+        });
+
+        Curso curso = buscarCurso(dto.getCursoId());
+        Instituicao instituicao = instituicaoRepository.findById(dto.getInstituicaoId())
+                .orElseThrow(() -> new InstituicaoNotFoundException("Instituição com ID " + dto.getInstituicaoId() + " não encontrada."));
+
+        Coordenador coordenador = new Coordenador();
+        coordenador.setNome(dto.getNome());
+        coordenador.setCpf(dto.getCpf());
+        coordenador.setEmail(dto.getEmail());
+        coordenador.setEmailAcademico(dto.getEmailAcademico());
+        coordenador.setInstituicao(instituicao);
+        coordenador.setCurso(curso);
+
         Coordenador salvo = coordenadorRepository.save(coordenador);
         return ResponseEntity.status(HttpStatus.CREATED).body(coordenadorMapper.toResponseDTO(salvo));
     }
 
     public ResponseEntity<CoordenadorResponseDTO> buscarPorId(Long id) {
         Coordenador coordenador = coordenadorRepository.findById(id)
-                .orElseThrow(CoordenadorNotFoundException::new);
+                .orElseThrow(() -> new CoordenadorNotFoundException("Coordenador com ID " + id + " não encontrado."));
         return ResponseEntity.ok(coordenadorMapper.toResponseDTO(coordenador));
     }
 
@@ -63,26 +73,25 @@ public class CoordenadorServiceImp {
         List<Coordenador> coordenadores = coordenadorRepository.findAll();
         List<CoordenadorResponseDTO> dtos = coordenadores.stream()
                 .map(coordenadorMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(dtos);
     }
 
     public ResponseEntity<CoordenadorResponseDTO> atualizar(Long id, CoordenadorRequestDTO dto) {
         Coordenador coordenador = coordenadorRepository.findById(id)
-                .orElseThrow(CoordenadorNotFoundException::new);
+                .orElseThrow(() -> new CoordenadorNotFoundException("Coordenador com ID " + id + " não encontrado."));
 
-        coordenadorMapper.updateCoordenadorFromDto(dto, coordenador);
+        coordenador.setNome(dto.getNome());
+        coordenador.setEmail(dto.getEmail());
+        coordenador.setEmailAcademico(dto.getEmailAcademico());
 
         if (dto.getCursoId() != null) {
             coordenador.setCurso(buscarCurso(dto.getCursoId()));
         }
-
-        if (dto.getDisciplinasId() != null) {
-            coordenador.setDisciplinas(buscarDisciplinas(dto.getDisciplinasId()));
-        }
-
-        if (dto.getInstituicaoId() != null) {
-            coordenador.setInstituicao(buscarInstituicao(dto.getInstituicaoId()));
+        if (dto.getInstituicaoId() != null){
+            Instituicao instituicao = instituicaoRepository.findById(dto.getInstituicaoId())
+                    .orElseThrow(() -> new InstituicaoNotFoundException("Instituição com ID " + dto.getInstituicaoId() + " não encontrada."));
+            coordenador.setInstituicao(instituicao);
         }
 
         Coordenador atualizado = coordenadorRepository.save(coordenador);
@@ -90,15 +99,15 @@ public class CoordenadorServiceImp {
     }
 
     public ResponseEntity<Void> deletar(Long id) {
-        Coordenador coordenador = coordenadorRepository.findById(id)
-                .orElseThrow(CoordenadorNotFoundException::new);
+        if (!coordenadorRepository.existsById(id)) {
+            throw new CoordenadorNotFoundException("Coordenador com ID " + id + " não encontrado.");
+        }
 
-        Curso curso = cursoRepository.findById(coordenador.getCurso().getId())
-                .orElseThrow(CursoNotFoundException::new);
+        String sql = "DELETE FROM coordenador WHERE id = ?1";
+        Query query = entityManager.createNativeQuery(sql);
+        query.setParameter(1, id);
+        query.executeUpdate();
 
-        curso.setCoordenador(null);
-
-        coordenadorRepository.delete(coordenador);
         return ResponseEntity.noContent().build();
     }
 
@@ -106,28 +115,4 @@ public class CoordenadorServiceImp {
         return cursoRepository.findById(id)
                 .orElseThrow(() -> new CursoNotFoundException("Curso com ID " + id + " não encontrado."));
     }
-
-
-    // Auxiliar
-    private List<Disciplina> buscarDisciplinas(List<Long> ids) {
-        if (ids == null || ids.isEmpty()) return Collections.emptyList();
-
-        List<Long> idsNaoEncontrados = ids.stream()
-                .filter(id -> disciplinaRepository.findById(id).isEmpty())
-                .toList();
-
-        if (!idsNaoEncontrados.isEmpty()) {
-            throw new DisciplinaNotFoundException("IDs de disciplinas inválidos: " + idsNaoEncontrados);
-        }
-
-        return ids.stream()
-                .map(id -> disciplinaRepository.findById(id).get())
-                .collect(Collectors.toList());
-    }
-
-    private Instituicao buscarInstituicao(Long id) {
-        return instituicaoRepository.findById(id)
-                .orElseThrow(() -> new InstituicaoNotFoundException("Instituição com ID " + id + " não encontrada."));
-    }
-
 }
